showing guide for new account. fixing spacing and using.

--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -28,6 +28,10 @@ body {
     padding-top: 20px;
 }
 
+.pt40{
+    padding-top: 40px;
+}
+
 .pb10{
     padding-bottom: 10px;
 }
@@ -531,4 +535,8 @@ body {
 
 .daterangepicker th.month {
     width: auto;
+}
+
+.list-guide > a:hover{
+    cursor: pointer;
 }
